[package]
name = "actix-web-middleware-redirect-https"
version = "0.1.1"
description = "A middleware for actix-web which forwards all `http` requests to `https` with optional url string replacement."
authors = ["Peter Trotman <petertrotman@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/actix-web-middleware-redirect-https"
repository = "https://github.com/petertrotman/actix-web-middleware-redirect-https"
readme = "README.md"
keywords = ["actix-web", "middleware", "redirect", "https", "ssl"]
categories = ["web-programming", "web-programming::http-server"]

[dependencies]
actix-service = "1.0.5"
actix-web = "2.0.0"
futures = "0.3.1"

[badges]
travis-ci = { repository = "https://travis-ci.org/petertrotman/actix-web-middleware-redirect-https", branch = "master" }
